tests/ui/privacy/private-variant-reexport.stderr
error[E0364]: `V` is only public within the crate, and cannot be re-exported outside
  --> $DIR/private-variant-reexport.rs:3:13
   |
LL |     pub use ::E::V;
   |             ^^^^^^
   |
note: consider marking `V` as `pub` in the imported module
  --> $DIR/private-variant-reexport.rs:3:13
   |
LL |     pub use ::E::V;
   |             ^^^^^^

error[E0364]: `V` is only public within the crate, and cannot be re-exported outside
  --> $DIR/private-variant-reexport.rs:7:19
   |
LL |     pub use ::E::{V};
   |                   ^
   |
note: consider marking `V` as `pub` in the imported module
  --> $DIR/private-variant-reexport.rs:7:19
   |
LL |     pub use ::E::{V};
   |                   ^

error[E0432]: unresolved import `E::V`
  --> $DIR/private-variant-reexport.rs:11:18
   |
LL |     pub use ::E::V::{self};
   |                  ^ `V` is a variant, not a module

error: glob import doesn't reexport anything with visibility `pub` because no imported item is public enough
  --> $DIR/private-variant-reexport.rs:16:13
   |
LL |     pub use ::E::*;
   |             ^^^^^^
   |
note: the most public imported item is `pub(crate)`
  --> $DIR/private-variant-reexport.rs:16:13
   |
LL |     pub use ::E::*;
   |             ^^^^^^
   = help: reduce the glob import's visibility or increase visibility of imported items
note: the lint level is defined here
  --> $DIR/private-variant-reexport.rs:14:8
   |
LL | #[deny(unused_imports)]
   |        ^^^^^^^^^^^^^^

error: unused import: `::E::*`
  --> $DIR/private-variant-reexport.rs:16:13
   |
LL |     pub use ::E::*;
   |             ^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0364, E0432.
For more information about an error, try `rustc --explain E0364`.
